feat(Lottery Admin): add labels

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,8 @@
     "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["state", "memo"] }],
     "react/require-default-props": 0,
     "no-nested-ternary": 0,
-    "max-classes-per-file": 0
+    "max-classes-per-file": 0,
+    "jsx-a11y/label-has-associated-control": 0
     // End temporary rules
   }
 }
