--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -89,14 +89,15 @@
     "react-datepicker": "^4.8.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
     "react-fast-marquee": "^1.6.0",
+    "react-redux": "^8.0.5",
     "react-transition-group": "^4.4.5",
     "react-window": "^1.8.7",
     "recharts": "2.1.15",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "remark-gfm": "^1.0.0",
+    "sharp": "^0.32.6",
     "siwe": "^1.1.6",
     "split-grid": "^1.0.11",
     "styled-components": "^6.0.7",
