--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -28,8 +28,8 @@ body:
       required: true
   - type: textarea
     attributes:
-      label: How does this feature benefit PancakeSwap users and KLAY holders?
-      description: Explain how this feature will be beneficial for the PancakeSwap community and ecosystem.
+      label: How does this feature benefit SweepStakes users and KLAY holders?
+      description: Explain how this feature will be beneficial for the SweepStakes community and ecosystem.
     validations:
       required: true
   - type: textarea
